Add Emp-Dashboard-Section & Emp-Analytics-Section

--- a/src/app/features/profiles/employer/employer-dashboard/employer-dashboard.css
+++ b/src/app/features/profiles/employer/employer-dashboard/employer-dashboard.css
@@ -8,6 +8,12 @@
     position: fixed;
     top: 0;
     left: 0;
+    transition: left 0.3s ease;
+    z-index: 1000;
+}
+
+.left-side-bar.collapsed {
+    left: -260px;
 }
 
 .logo-icon {
@@ -29,7 +35,8 @@
 .left-side-bar span {
     font-size: 13px;
 }
-.sidebar{
+
+.sidebar {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -64,13 +71,18 @@
     color: #1e40af;
 }
 
+.content {
+    margin-left: 260px; 
+    transition: margin-left 0.3s ease;
+    background-color: #f9fbfd;
+}
 
-.content{
-    padding: 50px;
+.content.content-collapsed {
+    margin-left: 0;
 }
 
 /* ------------------------- Profile Section ------------------------- */
-.profile-section{
+.profile-section {
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
     border-radius: 15px;
     overflow: hidden;
@@ -78,12 +90,11 @@
     color: white;
 }
 
-
-.info{
+.info {
     padding: 30px;
 }
 
-.image{
+.image {
     display: flex;
     justify-content: center;
     width: 200px;
@@ -91,43 +102,43 @@
     overflow: hidden;
 }
 
-.post-new-job-btn{
+.post-new-job-btn {
     padding: 6px 23px;
     border: none;
     outline: none;
     box-shadow: none;
     background: var(--basic-color);
-    color:white;
+    color: white;
     border-radius: 10px;
     height: fit-content;
 }
-.post-new-job-btn:hover{
+
+.post-new-job-btn:hover {
     background: var(--basic-color-hover);
 }
 
-
-.edit-profile-btn{
+.edit-profile-btn {
     padding: 5px 30px;
     border: none;
     outline: none;
     box-shadow: none;
     background: var(--basic-gray);
-    color:black;
+    color: black;
     border-radius: 10px;
     height: fit-content;
 }
-.edit-profile-btn:hover{
+
+.edit-profile-btn:hover {
     background: var(--basic-gray-hover);
 }
 
-
-.selected-route{
+.selected-route {
     padding: 8px 16px;
     border: none;
     outline: none;
     box-shadow: none;
-    background-color: #f0f4ff; 
-    color:black;
+    background-color: #f0f4ff;
+    color: black;
     border-radius: 10px;
     height: fit-content;
     text-decoration: none;
@@ -136,13 +147,12 @@
     font-weight: 500;
 }
 
-
 .selected-route:hover {
-  background-color: #f0f4ff;
+    background-color: #f0f4ff;
 }
 
 .active-route {
-  background: var(--basic-color);
-  color: #fff !important;
-  font-weight: 600;
+    background: var(--basic-color);
+    color: #fff !important;
+    font-weight: 600;
 }
