--- a/src/app/features/profiles/employer/employer-profile-section/employer-profile-section.html
+++ b/src/app/features/profiles/employer/employer-profile-section/employer-profile-section.html
@@ -1,9 +1,8 @@
 <div class="body ">
 
     <!-- Emp Profile -->
-    <div class="emp-profile">
-        
-
+    <div class="emp-profile pe-3">
+    
         <!-- Information Section -->
         <section class="info-section">
             <div class="d-flex">
@@ -97,7 +96,7 @@
 
 
         <!-- Social Media Section -->
-        <div class="social-media-section">
+        <div class="social-media-section mb-5">
             <h3>Social Media</h3>
             <div class="d-flex mt-4">
                 <div class="me-3">
