--- a/src/app/features/profiles/employer/employer-analytics-section/employer-analytics-section.html
+++ b/src/app/features/profiles/employer/employer-analytics-section/employer-analytics-section.html
@@ -1,4 +1,3 @@
-
 <body>
   <div class="container mt-2">
     <!-- Metrics Row -->
@@ -146,7 +145,7 @@
     </div>
 
     <!-- Pipeline -->
-    <div class="row mt-4 g-4">
+    <div class="row mt-4 mb-4">
       <div class="col-12">
         <div class="card card-custom p-3">
           <div class="card-header bg-white border-0">
