--- a/src/app/features/Jobs/emp-posted-jobs/emp-posted-jobs.css
+++ b/src/app/features/Jobs/emp-posted-jobs/emp-posted-jobs.css
@@ -43,10 +43,18 @@ body {
     font-weight: 500;
 }
 
-.status-draft { background: #ffeeba; color: #856404; }
-.status-active { background: #d4edda; color: #155724; }
-.status-filled { background: #d1ecf1; color: #0c5460; }
-.status-expired { background: #f8d7da; color: #721c24; }
+
+.status-active { background: #d4edda; color: #155724;  border-radius: 13px;}
+.status-filled { background: #d1ecf1; color: #0c5460;  border-radius: 13px;}
+.status-expired { background: #f8d7da; color: #721c24; border-radius: 13px; }
+
+.delete{
+    background: #f8d7da; 
+    color: #721c24;
+    padding: 10px;
+    border-style: none;
+    border-radius: 10px;
+}
 
 .job-actions button {
     font-size: 0.9rem;
