--- a/src/app/features/Jobs/emp-posted-jobs/emp-posted-jobs.html
+++ b/src/app/features/Jobs/emp-posted-jobs/emp-posted-jobs.html
@@ -132,7 +132,7 @@
         </p>
         <span class="tag">{{job.industry}}</span>
         <div class="mt-4 d-flex justify-content-center">
-          <button class="btn btn-outline-secondary px-5 me-3" routerLink="">
+          <button class="btn btn-outline-secondary px-5 me-3" [routerLink]="['/editJob',job.id]">
             <i class="bi bi-pencil-square me-2"></i>Edit
           </button>
           <button class="btn btn-primary px-5"> 
