--- a/src/app/features/profiles/employer/employer-dashbord-section/employer-dashbord-section.css
+++ b/src/app/features/profiles/employer/employer-dashbord-section/employer-dashbord-section.css
@@ -13,7 +13,7 @@ body {
     transition: transform 0.2s ease-in-out;
 }
 .stat-card:hover {
-    transform: translateY(-3px);
+    transform: translateY(-3px) scale(1.01);
 }
 
 .quick-actions .btn {
@@ -33,6 +33,8 @@ body {
 .activity-item {
     padding: 12px;
     border-bottom: 1px solid #f1f1f1;
+    transition: all 0.3s;
+    margin-bottom: 10px;
 }
 .activity-item:last-child {
     border-bottom: none;
@@ -40,6 +42,7 @@ body {
 .activity-item:hover{
     background-color: #f7f7f7;
     border-radius: 15px;
+    transform: translateX(5px);
 }
 
 .job-status {
@@ -55,6 +58,10 @@ body {
 .status-filled {
     background: #fce8e6;
     color: #c5221f;
+}
+.status-expired { 
+    background: #f8d7da; 
+    color: #721c24; 
 }
 
 .section-title {
